# wraith

./: .gitignore  LICENSE  README.md  RESEARCH.md  V0.1-CRITERIA.md  output.md  pyproject.toml  test-output.txt
.github/workflows/: ci.yml
src/wraith/: __init__.py  cli.py  client.py  engine.py  exploit.py  findings.py  mcp.py  metadata.py  mutators.py  oob.py  portscan.py  protocols.py  reporting.py  sarif.py
tests/: conftest.py  test_cli.py  test_engine.py  test_exploit.py  test_findings.py  test_mcp.py  test_metadata.py  test_mutators.py  test_oob.py  test_portscan.py  test_protocols.py  test_wheel_ship_gate.py
tests/fixtures/metadata/: alibaba_ram_credentials.json  aws_iam_credentials.json  azure_instance.json  azure_managed_identity.json  digitalocean_metadata.json  gcp_token.json  hetzner_metadata.yaml  oracle_instance.json
